# jsh

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: main.yml
src/: args.rs  main.rs
src/cli/: app.rs  event_loop.rs  mod.rs  prompt.rs  tty.rs  widget.rs
src/cli/code_area/: mod.rs  view.rs
src/cli/term/: buffer.rs  error.rs  mod.rs  setup.rs  style.rs  writer.rs
src/cli/term/buffer/: builder.rs  mod.rs
src/cli/term/utils/: mod.rs  wcwidth.rs
src/cli/ui/: mod.rs  style.rs
src/editor/: mod.rs
src/shell/: mod.rs
