[package]
name = "jsh"
version = "0.0.0"
authors = ["James Whaley <juicy66173@gmail.com>"]
description = """
An experiment at making a fast, hookable shell program.
"""
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

documentation = "https://docs.rs/jsh"
homepage = "https://github.com/Juici/jsh"
repository = "https://github.com/Juici/jsh"

categories = []
keywords = []

[features]
default = []

[dependencies]
anyhow = "1.0"
bitflags = "1.2"
clap = "2.33"
futures = "0.3"
pkg = "3.0.0"
thiserror = "1.0"

tokio = { version = "0.2", features = ["fs", "io-driver", "io-util", "io-std", "macros", "process", "rt-core", "signal", "sync", "time"] }

libc = "0.2"
crossterm = { version = "0.16", features = ["event-stream"] }
termios = "0.3"
